# sam3-camera-detector

./: .gitignore  Cargo.toml  README.md
src/: hikvision_sam3.rs  lib.rs  main.rs  v4l_sam3.rs  video_sam3.rs
